<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/basic"
            android:text="Recuperação de senha"
            android:textColor="@color/colorAccentDark"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccentDark"
            android:fontFamily="@font/basic"
            android:layout_marginTop="20dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:background="@drawable/login_edittext_bg"
            android:fontFamily="@font/basic"
            android:hint="@string/email_inst"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/colorAccentDark"
            android:textColorHint="#CCC" />

        <Button
            android:id="@+id/btn_submit_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_button_bg"
            android:fontFamily="@font/basic"
            android:text="@string/submit"
            android:textColor="@color/colorAccent" />

</ScrollView>